==> contiki-os/contiki/cpu/cc253x/usb/usb-arch.c <==
#include "contiki.h"
#include "usb-arch.h"
#include "port2.h"
#include "cc253x.h"
#include "sfr-bits.h"
#include "port.h"
#include "dma.h"
#define USB_PULLUP_PORT 	1
#define USB_PULLUP_PIN		0
#define USBCTRL_USB_EN 		(1 << 0)
#define USBCTRL_PLL_EN 		(1 << 1)
#define USBCTRL_PLL_LOCKED	(1 << 7)
#define USBIIE_EP0IE		(1 << 0)
#define USBIIE_INEPxIE(x)	(1 << x)
#define USBOIE_OUEPxIE(x)	(1 << x)
#define USBCSxH_ISO		(1 << 6)
#define USBCS0_CLR_SETUP_END	(1 << 7)
#define USBCS0_CLR_OUTPKT_RDY	(1 << 6)
#define USBCS0_SEND_STALL	(1 << 5)
#define USBCS0_SETUP_END	(1 << 4)
#define USBCS0_DATA_END		(1 << 3)
#define USBCS0_SENT_STALL	(1 << 2)
#define USBCS0_INPKT_RDY	(1 << 1)
#define USBCS0_OUTPKT_RDY	(1 << 0)
#define USBCSIL_SENT_STALL	(1 << 5)
#define USBCSIL_SEND_STALL	(1 << 4)
#define USBCSIL_FLUSH_PACKET	(1 << 3)
#define USBCSIL_UNDERRUN	(1 << 2)
#define USBCSIL_PKT_PRESENT	(1 << 1)
#define USBCSIL_INPKT_RDY	(1 << 0)
#define USBCSOL_SENT_STALL	(1 << 6)
#define USBCSOL_SEND_STALL	(1 << 5)
#define USBCSOL_OVERRUN		(1 << 2)
#define USBCSOL_OUTPKT_RDY	(1 << 0)
#define EP_IDLE 0
#define EP_RX 1
#define EP_TX 2
#define USB_EP_FLAGS_TYPE_MASK 0x03
#define USB_EP_FLAGS_TYPE_BULK 0x00
#define USB_EP_FLAGS_TYPE_CONTROL 0x01
#define USB_EP_FLAGS_TYPE_ISO 0x02
#define USB_EP_FLAGS_TYPE_INTERRUPT 0x03
#define USB_EP_FLAGS_ENABLED 	0x04
#define EP_TYPE(ep) ((ep)->flags & USB_EP_FLAGS_TYPE_MASK)
#define IS_EP_TYPE(ep, type) (EP_TYPE(ep) == (type))

unsigned int
usb_get_ep_events(uint8_t addr)
{
  volatile unsigned int e;
  uint8_t flag;
  USBEndpoint *ep = EP_STRUCT(addr);

  usb_irq_disable(flag);
  e = ep->events;
  ep->events = 0;
  usb_irq_enable(flag);

  return e;
}

static void
read_hw_buffer(uint8_t * to, uint8_t hw_ep, unsigned int len)
{
  __xdata uint8_t *from = &USBF0 + (hw_ep << 1);

#if DMA_ON
  // For small transfers we use PIO
  // This check is specific to SDCC and large/huge memory model
  if(len > 8 && ((uint8_t *) & to)[2] == 0x0 /* x data pointer */ ) {
    read_hw_buffer_dma(((uint8_t *) & to)[0], ((uint8_t *) & to)[1], from,
                       len);
    return;
  }
#endif
  while(len--) {
    *to++ = *from;
  }
}

static void
write_hw_buffer(uint8_t hw_ep, uint8_t * from, unsigned int len)
{
  __xdata uint8_t *to = &USBF0 + (hw_ep << 1);

#if DMA_ON
  // For small transfers we use PIO
  if(len > 8 && ((uint8_t *) & from)[2] == 0x0 /* x data pointer */ ) {
    write_hw_buffer_dma(to, ((uint8_t *) & from)[0], ((uint8_t *) & from)[1],
                        len);
    return;
  }
#endif
  while(len--) {
    *to = *from++;
  }
}

void
usb_arch_setup(void)
{
  uint8_t i;

  /* Switch on USB PLL & USB module */
  USBCTRL = USBCTRL_USB_EN | USBCTRL_PLL_EN;

  /* Wait until USB PLL is stable */
  while(!(USBCTRL & USBCTRL_PLL_LOCKED));

  /* Enable pull-up on usb port */
  PORT_SET(USB_PULLUP_PORT, USB_PULLUP_PIN);
  PORT_DIR_OUTPUT(USB_PULLUP_PORT, USB_PULLUP_PIN);

  for(i = 0; i < USB_MAX_ENDPOINTS; i++) {
    usb_endpoints[i].flags = 0;
    usb_endpoints[i].event_process = 0;
  }

  usb_arch_reset();

  // Disable all endpoints interrupts
  // Enpoint 0 interrupt will be enabled later
  USBIIE = 0;
  USBOIE = 0;

  cc253x_p2_register_handler(&usb_irq_handler);
  // We have to force IRQ enable as we might be the first user
  cc253x_p2_irq_force_enable();
}

void
usb_submit_recv_buffer(uint8_t addr, USBBuffer * buffer)
{
  USBBuffer **tailp;
  uint8_t flag;
  USBEndpoint *ep = EP_STRUCT(addr);

  if(!(ep->flags & USB_EP_FLAGS_ENABLED)) {
    return;
  }

  if(buffer->data == NULL && EP_HW_NUM(addr) == 0) {
    // the usb-core is trying to get the STATUS packet (ZLP in this case)
    // but the USB hardware is catching them, thus ignore this.
    // FIXME: Use the interrupt to release this buffer when the packet is sent
    // at least the timing would be better ...
    if(buffer->flags & USB_BUFFER_NOTIFY) {
      notify_ep_process(ep, USB_EP_EVENT_NOTIFICATION);
    }
    return;
  }

  usb_irq_disable(flag);

  tailp = &ep->buffer;
  while(*tailp) {
    tailp = &(*tailp)->next;
  }
  *tailp = buffer;
  while(buffer) {
    buffer->flags |= USB_BUFFER_SUBMITTED;
    buffer = buffer->next;
  }

  USBINDEX = EP_HW_NUM(addr);
  if(!EP_HW_NUM(ep->addr)) {
    if(USBCS0 & USBCS0_OUTPKT_RDY) {
      usb_arch_ep0_irq();
    }
  } else {
    if(USBCSOL & USBCSOL_OUTPKT_RDY) {
      usb_arch_epout_irq(EP_HW_NUM(ep->addr));
    }
  }
  usb_irq_enable(flag);
}

void
usb_submit_xmit_buffer(uint8_t addr, USBBuffer * buffer)
{
  USBBuffer **tailp;
  uint8_t flag;
  uint8_t res;
  USBEndpoint *ep = EP_STRUCT(addr);

  if(!(ep->flags & USB_EP_FLAGS_ENABLED)) {
    return;
  }

  usb_irq_disable(flag);


  if(EP_HW_NUM(addr) == 0) {
    if(buffer->data == NULL) {
      // We are asked to send a STATUS packet.
      // But the USB hardware is doing this automatically
      // as soon as we release hw FIFO.
      USBINDEX = 0;
      USBCS0 = USBCS0_CLR_OUTPKT_RDY | USBCS0_DATA_END;
      notify_ep_process(ep, USB_EP_EVENT_NOTIFICATION);
      usb_irq_enable(flag);
      return;
    } else {
      // Release the hw FIFO ...
      USBINDEX = 0;
      USBCS0 = USBCS0_CLR_OUTPKT_RDY;
    }
  }

  tailp = &ep->buffer;
  while(*tailp) {
    tailp = &(*tailp)->next;
  }
  *tailp = buffer;
  while(buffer) {
    buffer->flags |= USB_BUFFER_SUBMITTED | USB_BUFFER_IN;
    buffer = buffer->next;
  }

  USBINDEX = EP_HW_NUM(ep->addr);
  if(EP_HW_NUM(ep->addr)) {
    res = ep_tx(EP_HW_NUM(ep->addr));
  } else {
    res = ep0_tx();
  }

  usb_irq_enable(flag);

  if(res & USB_WRITE_NOTIFY) {
    notify_ep_process(ep, USB_EP_EVENT_NOTIFICATION);
  }

}

void
usb_arch_disable_endpoint(uint8_t addr)
{
  uint8_t ei = EP_HW_NUM(addr);
  uint8_t flag;
  USBEndpoint *ep = EP_STRUCT(addr);

  ep->flags &= ~USB_EP_FLAGS_ENABLED;

  usb_irq_disable(flag);
  USBINDEX = ei;
  if(ei == 0) {
    usb_arch_disable_ep0();
  } else {
    if(addr & 0x80) {
      usb_arch_disable_in_endpoint(addr);
    } else {
      usb_arch_disable_out_endpoint(addr);
    }
  }
  usb_irq_enable(flag);
}

void
usb_arch_discard_all_buffers(uint8_t addr)
{
  USBBuffer *buffer;
  uint8_t flag;
  volatile USBEndpoint *ep = EP_STRUCT(addr);

  usb_irq_disable(flag);
  buffer = ep->buffer;
  ep->buffer = NULL;
  usb_irq_enable(flag);

  while(buffer) {
    buffer->flags &= ~USB_BUFFER_SUBMITTED;
    buffer = buffer->next;
  }
}

void
usb_arch_control_stall(uint8_t addr)
{
  uint8_t ei = EP_HW_NUM(addr);
  uint8_t flag;

  if(ei > USB_MAX_ENDPOINTS) {
    return;
  }

  usb_irq_disable(flag);

  set_stall(addr, 1);

  usb_irq_enable(flag);
}

void
usb_arch_halt_endpoint(uint8_t addr, int halt)
{
  uint8_t ei = EP_HW_NUM(addr);
  uint8_t flag;
  USBEndpoint *ep = EP_STRUCT(addr);


  if(ei > USB_MAX_ENDPOINTS) {
    return;
  }

  if(!(ep->flags & USB_EP_FLAGS_ENABLED)) {
    return;
  }

  usb_irq_disable(flag);

  if(halt) {
    ep->halted = 0x1;
    set_stall(addr, 1);
  } else {
    ep->halted = 0;
    set_stall(addr, 0);

    if(ep->buffer && (ep->buffer->flags & USB_BUFFER_HALT)) {
      ep->buffer->flags &= ~USB_BUFFER_SUBMITTED;
      if(ep->buffer->flags & USB_BUFFER_NOTIFY) {
        notify_ep_process(ep, USB_EP_EVENT_NOTIFICATION);
      }
      ep->buffer = ep->buffer->next;
    }
    if(ei) {
      usb_arch_epout_irq(EP_HW_NUM(addr));
    }
  }

  usb_irq_enable(flag);
}

int
usb_arch_send_pending(uint8_t addr)
{
  uint8_t flag;
  uint8_t ret;
  uint8_t ei = EP_INDEX(addr);

  usb_irq_disable(flag);
  USBINDEX = ei;
  if(ei == 0) {
    ret = USBCS0 & USBCS0_INPKT_RDY;
  } else {
    ret = USBCSIL & USBCSIL_INPKT_RDY;
  }
  usb_irq_enable(flag);

  return ret;
}
